// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> can underline  1`] = `
<span
  className="f1l8jkug"
>
  <div
    aria-labelledby="uuid-test-mock"
    className="fmha84r"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      href="#"
    >
      hello world
    </a>
  </div>
  <div
    className="f1jx4gg0"
    id="uuid-test-mock"
  >
    test
  </div>
  <Overlay
    noBackground={true}
    onClose={[Function]}
  >
    <div
      className="f1l6ohaf"
      role="tooltip"
    >
      <div
        className="f19pb9j8"
      >
        <NotchedBox
          inverted={true}
          notchBelow={false}
        >
          <Text
            inverted={true}
          >
            test
          </Text>
        </NotchedBox>
      </div>
    </div>
  </Overlay>
</span>
`;

exports[`<Tooltip /> disabled does not underline 1`] = `
<span
  className="f1l8jkug"
>
  <div
    aria-labelledby="uuid-test-mock"
    className=""
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      href="#"
    >
      hello world
    </a>
  </div>
  <div
    className="f1jx4gg0"
    id="uuid-test-mock"
  >
    test
  </div>
  <Overlay
    noBackground={true}
    onClose={[Function]}
  >
    <div
      className="f1l6ohaf"
      role="tooltip"
    >
      <div
        className="f19pb9j8"
      >
        <NotchedBox
          inverted={true}
          notchBelow={false}
        >
          <Text
            inverted={true}
          >
            test
          </Text>
        </NotchedBox>
      </div>
    </div>
  </Overlay>
</span>
`;

exports[`<Tooltip /> disabled does not up when hovered 1`] = `
<span
  className="f1l8jkug"
>
  <div
    aria-labelledby="uuid-test-mock"
    className=""
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      href="#"
    >
      hello world
    </a>
  </div>
  <div
    className="f1jx4gg0"
    id="uuid-test-mock"
  >
    test
  </div>
  <Overlay
    noBackground={true}
    onClose={[Function]}
  >
    <div
      className="f1l6ohaf"
      role="tooltip"
    >
      <div
        className="f19pb9j8"
      >
        <NotchedBox
          inverted={true}
          notchBelow={false}
        >
          <Text
            inverted={true}
          >
            test
          </Text>
        </NotchedBox>
      </div>
    </div>
  </Overlay>
</span>
`;

exports[`<Tooltip /> once open supports changing content 1`] = `
<span
  className="f1l8jkug"
>
  <div
    aria-labelledby="uuid-test-mock"
    className=""
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      href="#"
    >
      hello world
    </a>
  </div>
  <div
    className="f1jx4gg0"
    id="uuid-test-mock"
  >
    whatever
  </div>
  <Overlay
    noBackground={true}
    onClose={[Function]}
    open={true}
  >
    <div
      className="f1l6ohaf"
      role="tooltip"
    >
      <div
        className="f19pb9j8"
      >
        <NotchedBox
          inverted={true}
          notchBelow={false}
        >
          <Text
            inverted={true}
          >
            whatever
          </Text>
        </NotchedBox>
      </div>
    </div>
  </Overlay>
</span>
`;

exports[`<Tooltip /> opens up when hovered 1`] = `
<span
  className="f1l8jkug"
>
  <div
    aria-labelledby="uuid-test-mock"
    className=""
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      href="#"
    >
      hello world
    </a>
  </div>
  <div
    className="f1jx4gg0"
    id="uuid-test-mock"
  >
    test
  </div>
  <Overlay
    noBackground={true}
    onClose={[Function]}
    open={true}
  >
    <div
      className="f1l6ohaf"
      role="tooltip"
    >
      <div
        className="f19pb9j8"
      >
        <NotchedBox
          inverted={true}
          notchBelow={false}
        >
          <Text
            inverted={true}
          >
            test
          </Text>
        </NotchedBox>
      </div>
    </div>
  </Overlay>
</span>
`;
